--- a/site.html
+++ b/site.html
@@ -40,7 +40,7 @@
                 <div class="navbar-nav">
                     <a href="dashboard.html" class="nav-item nav-link">Dashboard</a>
                     <a href="site.html" class="nav-item nav-link active">Site</a>
-                    <a href="#" class="nav-item nav-link">Workshop</a>
+                    <a href="workshop.html" class="nav-item nav-link">Workshop</a>
                     <a href="#" class="nav-item nav-link">Garage</a>
                     <a href="#" class="nav-item nav-link">Stock</a>
                     <a href="#" class="nav-item nav-link">Orders</a>
@@ -74,7 +74,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="workshop.html">
                                     <span data-feather="file"></span> Workshop
                                 </a>
                             </li>
