--- a/workshop.html
+++ b/workshop.html
@@ -160,6 +160,47 @@
                         </div>
                     </div>
 
+                    <div class="card mb-3">
+                      <div class="card-header">
+                        <i class="fas fa-table"></i>
+                        Workshop (Electrical / Mechanical) [Off-site]</div>
+                      <div class="card-body">
+                        <div class="table-responsive">
+                          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <thead>
+
+                             <tr>
+                                <th>Date</th>
+                                <th>From Site ID</th>
+                                <th>Description</th>
+                                <th>Resolved From</th>
+                                <th>Status</th>
+                                <th>Price</th>
+                                <th>Details</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>2019/10/07</td>
+                                <td>1002</td>
+                                <td>Panel board circuits from location-3 exploded. Requires new panel board.</td>
+                                <td></td>
+                                <td>Under-Progress</td>
+                                <th></th>
+                                <td><button type="button" class="btn btn-raised btn-secondary">View</button></td>
+                              </tr>
+                              <tr>
+                                <td>2019/10/06</td>
+                                <td>1002</td>
+                                <td>Panel board circuits from location-2 exploded. Requires new panel board.</td>
+                                <td>WKSHP-DXB003</td>
+                                <td>Completed, Will be dispatched to site</td>
+                                <td>$550</td>
+                                <td><button type="button" class="btn btn-raised btn-secondary">View</button></td>
+                              </tr>
+                            </tbody>
+                        </table>
+                    </div></div></div>
 
                 </main>
             </div>
