--- a/dashboard.html
+++ b/dashboard.html
@@ -42,7 +42,7 @@
                     <a href="dashboard.html" class="nav-item nav-link active">Dashboard</a>
                     <a href="site.html" class="nav-item nav-link">Site</a>
                     <a href="workshop.html" class="nav-item nav-link">Workshop</a>
-                    <a href="#" class="nav-item nav-link">Garage</a>
+                    <a href="garage.html" class="nav-item nav-link">Garage</a>
                     <a href="#" class="nav-item nav-link">Stock</a>
                     <a href="#" class="nav-item nav-link">Orders</a>
                     <a href="#" class="nav-item nav-link">Branches</a>
@@ -80,7 +80,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="garage.html">
                                     <span data-feather="file"></span> Garage 
                                 </a>
                             </li>
