--- a/site.html
+++ b/site.html
@@ -41,7 +41,7 @@
                     <a href="dashboard.html" class="nav-item nav-link">Dashboard</a>
                     <a href="site.html" class="nav-item nav-link active">Site</a>
                     <a href="workshop.html" class="nav-item nav-link">Workshop</a>
-                    <a href="#" class="nav-item nav-link">Garage</a>
+                    <a href="garage.html" class="nav-item nav-link">Garage</a>
                     <a href="#" class="nav-item nav-link">Stock</a>
                     <a href="#" class="nav-item nav-link">Orders</a>
                     <a href="#" class="nav-item nav-link">Branches</a>
@@ -79,7 +79,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="garage.html">
                                     <span data-feather="file"></span> Garage 
                                 </a>
                             </li>
