--- a/garage.html
+++ b/garage.html
@@ -191,10 +191,10 @@
                               <tr>
                                 <td>2019/10/06</td>
                                 <td>TRP-003</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Replace xyz abcd efghjkl</td>
+                                <td>WKSHP-DXB002</td>
+                                <td>Completed</td>
+                                <td>$100</td>
                                 <td><button type="button" class="btn btn-raised btn-secondary">View</button></td>
                               </tr>
                               <tr>
