--- a/garage.html
+++ b/garage.html
@@ -182,9 +182,9 @@
                               <tr>
                                 <td>2019/10/07</td>
                                 <td>TRP-006</td>
+                                <td>asdfghjkl</td>
                                 <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Received</td>
                                 <th></th>
                                 <td><button type="button" class="btn btn-raised btn-secondary">View</button></td>
                               </tr>
@@ -200,9 +200,9 @@
                               <tr>
                                 <td>2019/10/10</td>
                                 <td>TRP-005</td>
+                                <td>qwertyuiop</td>
                                 <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Received</td>
                                 <td></td>
                                 <td><button type="button" class="btn btn-raised btn-secondary">View</button></td>
                               </tr>
