--- a/dashboard.html
+++ b/dashboard.html
@@ -91,7 +91,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <span data-feather="shopping-cart"></span> Service Orders Tracking
+                                    <span data-feather="shopping-cart"></span> Approved Requests Tracking
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -106,7 +106,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
-                                    <span data-feather="layers"></span> Requests
+                                    <span data-feather="layers"></span> Create / Sent Requests
                                 </a>
                             </li>
                             <li class="nav-item">
