--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,7 @@
                     <a href="site.html" class="nav-item nav-link">Site</a>
                     <a href="workshop.html" class="nav-item nav-link">Workshop</a>
                     <a href="garage.html" class="nav-item nav-link">Garage</a>
-                    <a href="#" class="nav-item nav-link">Stock</a>
+                    <a href="stock.html" class="nav-item nav-link">Stock</a>
                     <a href="#" class="nav-item nav-link">Orders</a>
                     <a href="#" class="nav-item nav-link">Branches</a>
                     <a href="#" class="nav-item nav-link">Reports</a>
@@ -85,7 +85,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="stock.html">
                                     <span data-feather="file"></span> Stock Management
                                 </a>
                             </li>
