--- a/garage.html
+++ b/garage.html
@@ -47,7 +47,7 @@
                     <a href="#" class="nav-item nav-link">Branches</a>
                     <a href="#" class="nav-item nav-link">Reports</a>
                     <a href="#" class="nav-item nav-link">Requests</a>
-                    <a href="#" class="nav-item nav-link">Support</a>
+                    <a href="support.html" class="nav-item nav-link">Support</a>
                 </div>
                 <div class="navbar-nav ml-auto">
                     <button class="btn btn-sm btn-outline-secondary">
@@ -109,7 +109,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="support.html">
                                     <span data-feather="layers"></span> Support
                                 </a>
                             </li>
