include stock table

--- a/stock.html
+++ b/stock.html
@@ -159,7 +159,85 @@
                             </button>
                         </div>
                     </div>
-
+                    <div class="card mb-3">
+                      <div class="card-header">
+                        <i class="fas fa-table"></i>
+                        Stock Management</div>
+                      <div class="card-body">
+                        <div class="table-responsive">
+                          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <thead>
+                             <tr>
+                                <th>Item Code</th>
+                                <th>Stock ID</th>
+                                <th>Description</th>
+                                <th>Available At</th>
+                                <th>Available Quantity</th>
+                                <th>Status</th>
+                                <th>Price per unit</th>
+                                <th>Required Qty</th>
+                                <th>unit</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>100012</td>
+                                <td>223</td>
+                                <td>Omron PLC CJ11M</td>
+                                <td>WKSHP-DXB003</td>
+                                <td>15</td>
+                                <th>In-Stock</th>
+                                <td>$600</td>
+                                <td>0</td>
+                                <td>piece</td>
+                              </tr>
+                              <tr>
+                                <td>100010</td>
+                                <td>226</td>
+                                <td>Schneider Circuit Breaker</td>
+                                <td>WKSHP-DXB003</td>
+                                <td>20</td>
+                                <th>In-Stock</th>
+                                <td>$250</td>
+                                <td>0</td>
+                                <td>piece</td>
+                              </tr>
+                              <tr>
+                                <td>100014</td>
+                                <td>220</td>
+                                <td>Power Cable</td>
+                                <td>WKSHP-DXB003</td>
+                                <td>2</td>
+                                <th>Out-of-Stock</th>
+                                <td>$10</td>
+                                <td>10</td>
+                                <td>metres</td>
+                              </tr>
+                              <tr>
+                                <td>100114</td>
+                                <td>246</td>
+                                <td>Digital Multimeter</td>
+                                <td>WKSHP-DXB003</td>
+                                <td>2</td>
+                                <th>In-Stock</th>
+                                <td>$50</td>
+                                <td>0</td>
+                                <td>piece</td>
+                              </tr>
+                              <tr>
+                                <td>100114</td>
+                                <td>238</td>
+                                <td>Digital Multimeter</td>
+                                <td>WKSHP-DXB002</td>
+                                <td>1</td>
+                                <th>In-Stock</th>
+                                <td>$50</td>
+                                <td>0</td>
+                                <td>piece</td>
+                              </tr>
+                            </tbody>
+                        </table>
+                    </div></div></div>
 
                 </main>
             </div>
