--- a/stock.html
+++ b/stock.html
@@ -44,7 +44,7 @@
                     <a href="garage.html" class="nav-item nav-link">Garage</a>
                     <a href="stock.html" class="nav-item nav-link active">Stock</a>
                     <a href="#" class="nav-item nav-link">Orders</a>
-                    <a href="#" class="nav-item nav-link">Branches</a>
+                    <a href="branch.html" class="nav-item nav-link">Branches</a>
                     <a href="#" class="nav-item nav-link">Reports</a>
                     <a href="#" class="nav-item nav-link">Requests</a>
                     <a href="support.html" class="nav-item nav-link">Support</a>
@@ -94,7 +94,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="branch.html">
                                     <span data-feather="layers"></span> Branches List
                                 </a>
                             </li>
