--- a/support.html
+++ b/support.html
@@ -43,7 +43,7 @@
                     <a href="garage.html" class="nav-item nav-link">Garage</a>
                     <a href="stock.html" class="nav-item nav-link">Stock</a>
                     <a href="#" class="nav-item nav-link">Orders</a>
-                    <a href="#" class="nav-item nav-link">Branches</a>
+                    <a href="branch.html" class="nav-item nav-link">Branches</a>
                     <a href="#" class="nav-item nav-link">Reports</a>
                     <a href="#" class="nav-item nav-link">Requests</a>
                     <a href="support.html" class="nav-item nav-link active">Support</a>
@@ -93,7 +93,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="branch.html">
                                     <span data-feather="layers"></span> Branches List
                                 </a>
                             </li>
