--- a/garage.html
+++ b/garage.html
@@ -192,7 +192,7 @@
                                 <td>2019/10/06</td>
                                 <td>TRP-003</td>
                                 <td>Replace xyz abcd efghjkl</td>
-                                <td>WKSHP-DXB002</td>
+                                <td>GRG-DXB002</td>
                                 <td>Completed</td>
                                 <td>$100</td>
                                 <td><button type="button" class="btn btn-raised btn-secondary">View</button></td>
