update branch table

--- a/branch.html
+++ b/branch.html
@@ -160,6 +160,149 @@
                         </div>
                     </div>
 
+                    <div class="card mb-3">
+                      <div class="card-header">
+                        <i class="fas fa-table"></i>
+                        Stock Management</div>
+                      <div class="card-body">
+                        <div class="table-responsive">
+                          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <thead>
+                             <tr>
+                                <th>Branch Code</th>
+                                <th>Type</th>
+                                <th>Name</th>
+                                <th>Category</th>
+                                <th>Linked Entity</th>
+                                <th>Country</th>
+                                <th>Email</th>
+                                <th>Phone</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>WKSHP-DXB003</td>
+                                <td>Workshop</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <th>UAE</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>GRG-DXB002</td>
+                                <td>Garage</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <th>UAE</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>TRP-003</td>
+                                <td>Transport</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <th>Egypt</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>TRP-006</td>
+                                <td>Transport</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <th>Oman</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>TRP-005</td>
+                                <td>Transport</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <th>KSA</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>WKSHP-DXB002</td>
+                                <td>Workshop</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <th>UAE</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>SIT-1002</td>
+                                <td>Site</td>
+                                <td>asdfghjkl</td>
+                                <td>Cement Plant</td>
+                                <td></td>
+                                <th>UAE</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>SIT-1001</td>
+                                <td>Site</td>
+                                <td>qwertyuiop</td>
+                                <td>Readymix concrete Plant</td>
+                                <td>NRC-001</td>
+                                <th>Bahrain</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>SIT-1003</td>
+                                <td>Site</td>
+                                <td>zxcvbnm</td>
+                                <td>Powerplant</td>
+                                <td></td>
+                                <th>UAE</th>
+                                <td></td>
+                                <td>971-567890</td>
+                              </tr>
+                              <tr>
+                                <td>SIT-1004</td>
+                                <td>Site</td>
+                                <td>wzxcvbnm</td>
+                                <td>Precast Plant</td>
+                                <td></td>
+                                <th>UAE</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>WKSHP-KW022</td>
+                                <td>Workshop</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <th>Kuwait</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td>WKSHP-QA202</td>
+                                <td>Workshop</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <th>Qatar</th>
+                                <td></td>
+                                <td></td>
+                              </tr>
+                            </tbody>
+                        </table>
+                    </div></div></div>
 
                 </main>
             </div>
