--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,7 @@
                     <a href="#" class="nav-item nav-link">Orders</a>
                     <a href="branch.html" class="nav-item nav-link">Branches</a>
                     <a href="#" class="nav-item nav-link">Reports</a>
-                    <a href="#" class="nav-item nav-link">Requests</a>
+                    <a href="requests.html" class="nav-item nav-link">Requests</a>
                     <a href="support.html" class="nav-item nav-link">Support</a>
                 </div>
                 <div class="navbar-nav ml-auto">
@@ -105,7 +105,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="requests.html">
                                     <span data-feather="layers"></span> Create / Sent Requests
                                 </a>
                             </li>
