--- a/requests.html
+++ b/requests.html
@@ -185,9 +185,9 @@
                         <select class="form-control" id="exampleSelect1">
                           <option>Manpower</option>
                           <option>Purchase Order</option>
-                          <option>IT Issues</option>
+                          <option>IT Needs</option>
                         </select>
-                        <span class="bmd-help">Manpower=Request goes to HR Department, Purchase Order=Request goes to Accounts, IT Issues=Request goes to IT Support</span>
+                        <span class="bmd-help">Manpower=Request goes to HR Department, Purchase Order=Request goes to Accounts, IT Needs=Request goes to IT Support</span>
                       </div>
                       <div class="form-group">
                         <label for="exampleTextarea" class="bmd-label-floating">Describe Your Request in Detail</label>
@@ -196,7 +196,7 @@
                       <div class="form-group">
                         <label for="exampleInputFile" class="bmd-label-floating">Attach a Document</label>
                         <input type="file" class="form-control-file" id="exampleInputFile">
-                        <small class="text-muted">Only one file can be uploaded. If purchase order, then attach quotation or price details. If manpower, then attach manpower details along with reasons and price. Not mandatory for IT Issues</small>
+                        <small class="text-muted">Only one file can be uploaded. If purchase order, then attach quotation or price details. If manpower, then attach manpower details along with reasons and price. Not mandatory for IT Needs.</small>
                       </div>
                       <div class="radio">
                         <label>
